--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,15 @@ a{
         font-size: 20px;
         margin: 50px;
     }
+
+    .x1{
+        font-size: 20px;
+        color: red;
+
+
+    }
+    h3{
+        margin-left: 20px;
+        font-size: 30px;
+    }
+    
