--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ h1{
     margin: 20;
     border-radius: 20px;
     padding: 20px;
+   
 
 }
 .img{
@@ -21,6 +22,11 @@ h2{
 font-size: 50px;
 text-align: center;
 text-emphasis: bold ;
+font-weight: bold;
+font-style: italic;
+text-decoration: underline;
+
+
 b
 }
 body{
@@ -44,11 +50,13 @@ a{
     .x1{
         font-size: 20px;
         color: red;
-
+       font-family:'Times New Roman', Times, serif
 
     }
     h3{
         margin-left: 20px;
         font-size: 30px;
+        font-weight: bold;
+    }
     }
     
